# xrml

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
notebook/: examples.ipynb
xrml/: __init__.py  utils.py
xrml/tests/: utils_test.py
