[project]
name = "xrml"
description = "A lightweight machine learning framework for Xarray"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["xarray", "machine learning"]
authors = [
  {name = "Eric Czech"},
  {name = "Rafal Wojdyla"},
]
maintainers = []
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "xarray",
  "scikit-learn",
  "pandas",
  "fsspec",
  "shap",
  "dill"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pre-commit < 4",
  "pytest < 8",
]

[project.urls]
repository = "https://github.com/related-sciences/xrml"

[build-system]
requires = ["setuptools >= 45", "setuptools_scm[toml] >= 6.2"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py310"
line-length = 88
ignore = [
    "E402",  # ignore import-at-top-of-file violations
    "E501",  # ignore line-length violations
    "F811",  # ignore redefinition of a function
    "B019",  # ignore functools cache/lru_cache
    "UP030", # allow explicit positional string formatting
    ]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.ruff.mccabe]
max-complexity = 20

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "*.tests.*",
    "conftest",
]
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
